--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,16 +1,31 @@
 security:
+    encoders:
+        algorithm: bcrypt
     # https://symfony.com/doc/current/security/experimental_authenticators.html
     enable_authenticator_manager: true
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
     providers:
         users_in_memory: { memory: null }
+        users_in_database:
+            entity:
+                class: App\Entity\User
+                property: username
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
             lazy: true
-            provider: users_in_memory
+            provider: users_in_database
+
+            form_login:
+                login_path: login
+                check_path: login
+                default_target_path: telephone
+
+            logout:
+                path: logout
+                target: telephone
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#firewalls-authentication
