--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,6 +1,7 @@
 security:
     encoders:
-        algorithm: bcrypt
+        App\Entity\User:
+            algorithm: bcrypt
     # https://symfony.com/doc/current/security/experimental_authenticators.html
     enable_authenticator_manager: true
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
