--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -38,4 +38,5 @@ security:
     # Note: Only the *first* access control that matches will be used
     access_control:
         # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+        - { path: ^/telephone/create, roles: ROLE_USER }
+        - - { path: ^/telephone/edit, roles: ROLE_USER }
